welcome.lessons.welcome.summative.Moria.scala.code
while (!estFaceMur){
  setDirection(Direction.Est)
	while (!estSurBiscuit){
  	avance()
  }
  prendBiscuit()
	setDirection(Direction.West)
	while (!estSurBiscuit){
  	avance()
  }
	recule()
	poseBiscuit()
}
droite()
avance()
gauche()
avance()